noinst_LIBRARIES=libsf.a
libsf_a_SOURCES=sf_main.c sf_socket.c sf_session.c sf_proto.c sf_pbuf.c sf_timer.c sf_plog.c sf_util.c sf_epoll.c  sf_kqueue.c sf.h sf_pbuf.h sf_proto.h sf_socket.h sf_util.h sf_main.h sf_plog.h sf_session.h sf_timer.h
libsf_a_LIBADD=sf_main.o sf_socket.o sf_session.o sf_proto.o sf_pbuf.o sf_timer.o sf_plog.o sf_util.o sf_epoll.o sf_kqueue.o
